合并后轮廓面积计算1.3