@@ -243,25 +243,27 @@ public class MarkingServiceImpl implements MarkingService {
             Double perimeter = new Double(req.getPerimeter()) * MICRON;
             marking.setPerimeter(String.valueOf(perimeter));
         }*/
-		Image image = getImageById(slideBy.getImageId().longValue());
-		if (req.getArea() != null) {
-			Double area = 0.0;
-			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
-				area = new Double(req.getArea()) * Double.valueOf(image.getResolutionX()) * Double.valueOf(image.getResolutionX());
-			}else{
-				area = new Double(req.getArea()) * MICRON;
-			}
-			marking.setArea(String.valueOf(area));
-		}
-		if (req.getPerimeter() != null) {
-			Double perimeter = 0.0;
-			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
-				perimeter = new Double(req.getPerimeter()) * Double.valueOf(image.getResolutionX());
-			}else{
-				perimeter = new Double(req.getPerimeter()) * MICRON;
-			}
-			marking.setPerimeter(String.valueOf(perimeter));
-		}
+//		Image image = getImageById(slideBy.getImageId().longValue());
+//		if (req.getArea() != null) {
+//			Double area = 0.0;
+//			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
+//				area = new Double(req.getArea()) * Double.valueOf(image.getResolutionX()) * Double.valueOf(image.getResolutionX());
+//			}else{
+//				area = new Double(req.getArea()) * MICRON;
+//			}
+//			marking.setArea(String.valueOf(area));
+//		}
+//		if (req.getPerimeter() != null) {
+//			Double perimeter = 0.0;
+//			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
+//				perimeter = new Double(req.getPerimeter()) * Double.valueOf(image.getResolutionX());
+//			}else{
+//				perimeter = new Double(req.getPerimeter()) * MICRON;
+//			}
+//			marking.setPerimeter(String.valueOf(perimeter));
+//		}
+		marking.setArea(req.getArea());
+		marking.setPerimeter(req.getPerimeter());
 		// 若未传入标注作者,使用当前登录用户为标注作者==>必传Create_by 无默认
 		marking.setCreate_by(req.getCreate_by());
 		marking.setAnnotation_type("Draw");
@@ -437,25 +439,27 @@ public class MarkingServiceImpl implements MarkingService {
 			Double perimeter = new Double(req.getPerimeter()) * MICRON;
 			marking.setPerimeter(String.valueOf(perimeter));
 		}*/
-		Image image = getImageById(slide.getImageId().longValue());
-		if (req.getArea() != null) {
-			Double area = 0.0;
-			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
-				area = new Double(req.getArea()) * Double.valueOf(image.getResolutionX()) * Double.valueOf(image.getResolutionX());
-			}else{
-				area = new Double(req.getArea()) * MICRON;
-			}
-			marking.setArea(String.valueOf(area));
-		}
-		if (req.getPerimeter() != null) {
-			Double perimeter = 0.0;
-			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
-				perimeter = new Double(req.getPerimeter()) * Double.valueOf(image.getResolutionX());
-			}else{
-				perimeter = new Double(req.getPerimeter()) * MICRON;
-			}
-			marking.setPerimeter(String.valueOf(perimeter));
-		}
+//		Image image = getImageById(slide.getImageId().longValue());
+//		if (req.getArea() != null) {
+//			Double area = 0.0;
+//			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
+//				area = new Double(req.getArea()) * Double.valueOf(image.getResolutionX()) * Double.valueOf(image.getResolutionX());
+//			}else{
+//				area = new Double(req.getArea()) * MICRON;
+//			}
+//			marking.setArea(String.valueOf(area));
+//		}
+//		if (req.getPerimeter() != null) {
+//			Double perimeter = 0.0;
+//			if(null != image && StringUtils.isNotEmpty(image.getResolutionX())){
+//				perimeter = new Double(req.getPerimeter()) * Double.valueOf(image.getResolutionX());
+//			}else{
+//				perimeter = new Double(req.getPerimeter()) * MICRON;
+//			}
+//			marking.setPerimeter(String.valueOf(perimeter));
+//		}
+		marking.setArea(req.getArea());
+		marking.setPerimeter(req.getPerimeter());
 		List<PointCount> pointCountList = updatePoint(markingBy.getLocation_type(), markingBy);
 		// 修改轮廓时，轮廓为空
 		if (req.getCategory_id() == null && req.getDescription() == null) {
